v1/modules/schema/pages/index.adoc
= Index

== Classes

[cols="1,2"]
|===
| Name | Description


| xref::class/BaseWork.adoc[`BaseWork`]
| +++Common representation for work and work tasks.+++

| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Interval between two date and time points, where the interval includes the start time but excludes end time.+++

| xref::class/Document.adoc[`Document`]
| +++Parent class for different groupings of information collected and managed as a part of a business process. It will frequently contain references to other objects, such as assets, people and power system resources.+++

| xref::class/EnergyArea.adoc[`EnergyArea`]
| +++Describes an area having energy production or consumption. Specializations are intended to support the load allocation function as typically required in energy management systems or planning studies to allocate hypothesized load levels to individual load points for power flow analysis. Often the energy area can be linked to both measured and forecast load levels.+++

| xref::class/HeatmapDataSet.adoc[`HeatmapDataSet`]
| +++A single instance of a published dataset. The descriptions of these fields are taken from the Dublin Core Standard.+++

| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
| +++This is a root class to provide common identification for all classes needing identification and naming attributes.+++

| xref::class/Name.adoc[`Name`]
| +++The Name class provides the means to define any number of human readable names for an object. A name is <b>not</b> to be used for defining inter-object relationships. For inter-object relationships instead use the object identification 'mRID'+++

| xref::class/NameType.adoc[`NameType`]
| +++Type of name. Possible values for attribute 'name' are implementation dependent but standard profiles may specify types. An enterprise may have multiple IT systems each having its own local name for the same object, e.g.  a planning system may have different names from an EMS. An object may also have different names within the same IT system, e.g. localName as defined in CIM version 14. The definition from CIM14 is The localName is a human readable name of the object. It is a free text name local to a node in a naming hierarchy similar to a file directory structure. A power system related naming hierarchy may be Substation, VoltageLevel, Equipment etc. Children of the same parent in such a hierarchy have names that typically are unique among them.+++

| xref::class/NameTypeAuthority.adoc[`NameTypeAuthority`]
| +++Authority responsible for creation and management of names of a given type; typically an organization or an enterprise system.+++

| xref::class/PostcodeArea.adoc[`PostcodeArea`]
| +++A geographic region that is defined by the initial letters or digits of a postcode.+++

| xref::class/TimeSchedule.adoc[`TimeSchedule`]
| +++Description of anything that changes through time. Time schedule is used to perform a single-valued function of time. Use inherited 'type' attribute to give additional information on this schedule, such as periodic (hourly, daily, weekly, monthly, etc.), day of the month, by date, calendar (specific times and dates).+++

| xref::class/UpdateInfo.adoc[`UpdateInfo`]
| +++Specific type of information that was updated for this dataset.+++

| xref::class/Work.adoc[`Work`]
| +++Document used to request, initiate, track and record work. Use the *description* attribute to add additional information about this *Work*. This is *Toelichting bijzonderheden rondom planning* in the previous implementation.+++

| xref::class/WorkTimeSchedule.adoc[`WorkTimeSchedule`]
| +++Time schedule specific to work.+++

|===

== Types

No types are defined in the schema.


== Enumerations


[cols="1,2"]
|===
| Name | Description

| xref::enumeration/EnergyAreaKind.adoc[`EnergyAreaKind`]
| +++Kind of EnergyAdea. Defines the energy area as a regular energy area, or congestion area.+++

| xref::enumeration/RAGKind.adoc[`RAGKind`]
| +++Traffic light colors coding scheme for categorising status.+++

| xref::enumeration/UpdateInfoKind.adoc[`UpdateInfoKind`]
| +++Type of information that has been updated as part of this dataset.+++

| xref::enumeration/WorkStatusKind.adoc[`WorkStatusKind`]
| +++Kind of status, specific to work.+++

| xref::enumeration/WorkTimeScheduleKind.adoc[`WorkTimeScheduleKind`]
| +++Kind of work schedule.+++

|===
